added example of typography

--- a/index.html
+++ b/index.html
@@ -3,14 +3,24 @@
 <head>
 	<title>Typography</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Playfair+Display:400,400i,900i" rel="stylesheet">
 
 </head>
 <body>
 	<h1>This is Typography Excercise</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex natus porro laboriosam, iste vero, quo consequuntur quas nulla beatae tempore odit aut, esse repudiandae nihil amet corporis voluptatibus! Delectus, quidem! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ea itaque molestias assumenda aliquam minus deserunt ullam doloribus, quasi. Quasi eveniet magnam voluptate cupiditate distinctio praesentium, maxime accusantium . Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam unde assumenda, consequatur excepturi cum facere voluptates saepe sunt obcaecati, enim eligendi temporibus doloribus quis non! Commodi excepturi repellendus nihil quidem.</p>
+	
 	<p>
 	natus porro laboriosam, iste vero, quo consequuntur quas nulla beatae tempore odit aut, esse repudiandae nihil amet corporis voluptatibus! Delectus, quidem! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ea itaque molestias assumenda aliquam minus deserunt ullam doloribus, quasi. Quasi eveniet magnam voluptate cupiditate distinctio praesentium, maxime accusantium . Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam unde assumenda, consequatur excepturi cum facere voluptates saepe sunt obcaecati, enim eligendi temporibus doloribus quis non! Commodi excepturi repellendus nihil quidem.</p>
+
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur eveniet laborum pariatur expedita, aut repellat dicta quas voluptatem delectus sint quo, sunt vitae suscipit. Magnam est sapiente voluptas, dignissimos temporibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat eum esse vitae reprehenderit doloremque distinctio, cupiditate maxime expedita quae. Voluptatibus rerum aliquid esse vero id tenetur repudiandae ullam dignissimos distinctio. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus ipsa cumque dignissimos ut atque cupiditate officia, ipsam mollitia distinctio adipisci magnam quam, ratione impedit quaerat iusto nobis dolore sint laboriosam?
+		
+	</p>
+
+	<p>
+	Consectetur eveniet laborum pariatur expedita, aut repellat dicta quas voluptatem delectus sint quo, sunt vitae suscipit. Magnam est sapiente voluptas, dignissimos temporibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat eum esse vitae reprehenderit doloremque distinctio, cupiditate maxime expedita quae. Voluptatibus rerum aliquid esse vero id tenetur repudiandae ullam dignissimos distinctio. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus ipsa cumque dignissimos ut atque cupiditate officia, ipsam mollitia distinctio adipisci magnam quam, ratione impedit quaerat iusto nobis dolore sint laboriosam?
+		
+	</p>
 
 </body>
 </html>
